# Analytics-Portfolio

./: A_B_тест_(z_тест).ipynb  ML_+_финансовое_моделирование.ipynb  README.md
rest_api_analitics/: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
проект 1 Excel/: README.md  Анализ продаж магазинов.xlsx
проект 2 ml/: README.md
проект 3 PoweBI/: README.md  Анализ powerBI1.pbix
