[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rest-api-analytics"
version = "0.1.0"
description = "Аналитический проект с REST API и аналитикой"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "codespell>=2.2.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
]

notebooks = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]

[project.scripts]
analytics = "src.main:main"
run-api = "src.api.main:run"
run-analysis = "src.analysis.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", "ANN102", "D107", "D203", "D213", "E501",
    "PLR0913", "PLR2004", "S101", "TRY003", "C901",
    "PLR0912", "PLR0915",
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"